# search-engine-rs

./: .gitignore  Cargo.toml
scripts/: package-lock.json  package.json
scripts/src/: fetch-history.js  fetch-transcripts.js  fetch-transcripts.ts  ids.json
src/: main.rs
