[package]
name = "search-engine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
rust-stemmers = "1.2.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
xml-rs = "0.8.16"
